# order-flow-test

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
order_flow/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  pagination.py  serializers.py  tests.py  views.py
orders/fixtures/: order_details.json  orders.json  products.json
orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_orderdetail_product.py  0004_alter_order_created_at.py
